--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,47 @@
-.App {
-  text-align: center;
+*{
+  box-sizing: border-box;
+  margin: 0px;
+  padding: 0px ;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+html, body
+{
+  background: black url("img/bg1.jpg") no-repeat center center/cover ;
+  height: 1000vh ;
+  /* color: white; */
+  font-family: sans-serif;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+header{
+  height: 200px;
+}
+header img{
+  width: 200px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.header-logo{
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+.search
+{
+  height: 100px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+input[type="text"]{
+  display: block;
+  font-size: 20px;
+  border-radius: 5px ;
+  width: 60%;
+  margin: auto;
+  padding:10px;
+  border: none;
+  outline: none;
+}
+input[type="text"]:focus{
+  box-shadow: 0px 0px 2px .5px rgba(255,255,255,0.75);
+-webkit-box-shadow: 0px 0px 5px 1px rgba(255,255,255,0.75);
+-moz-box-shadow: 0px 0px 5px 1px rgba(255,255,255,0.75);
 }
