--- a/src/App.css
+++ b/src/App.css
@@ -1,47 +1,73 @@
-*{
+* {
   box-sizing: border-box;
   margin: 0px;
-  padding: 0px ;
+  padding: 0px;
 }
 
-html, body
-{
-  background: black url("img/bg1.jpg") no-repeat center center/cover ;
-  height: 1000vh ;
+html,
+body {
+  background: black url("img/bg2.jpg") no-repeat center center/cover;
+  height: 100vh;
   /* color: white; */
   font-family: sans-serif;
 }
 
-header{
+header {
   height: 200px;
 }
-header img{
+header img {
   width: 200px;
 }
 
-.header-logo{
+.header-logo {
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.search
-{
+.search {
   height: 100px;
 }
 
-input[type="text"]{
+input[type="text"] {
   display: block;
   font-size: 20px;
-  border-radius: 5px ;
+  border-radius: 5px;
   width: 60%;
   margin: auto;
-  padding:10px;
+  padding: 10px;
   border: none;
   outline: none;
 }
-input[type="text"]:focus{
-  box-shadow: 0px 0px 2px .5px rgba(255,255,255,0.75);
--webkit-box-shadow: 0px 0px 5px 1px rgba(255,255,255,0.75);
--moz-box-shadow: 0px 0px 5px 1px rgba(255,255,255,0.75);
+input[type="text"]:focus {
+  box-shadow: 0px 0px 2px 0.5px rgba(255, 255, 255, 0.75);
+  -webkit-box-shadow: 0px 0px 5px 1px rgba(255, 255, 255, 0.75);
+  -moz-box-shadow: 0px 0px 5px 1px rgba(255, 255, 255, 0.75);
+}
+
+.cards {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 1rem;
+}
+
+.card {
+  cursor: pointer;
+  background-color: transparent;
+  height: 300px;
+  perspective: 1000px;
+  margin: 10px;
+  padding: 5px;
+}
+
+.card img {
+  width: 100%;
+  height: 300px;
+  object-fit: cover;
+}
+
+.card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
 }
