--- a/src/App.css
+++ b/src/App.css
@@ -6,9 +6,8 @@
 
 html,
 body {
-  background: black url("img/bg2.jpg") no-repeat center center/cover;
+  background: red url("img/bg2.jpg") no-repeat center center/cover;
   height: 100vh;
-  /* color: white; */
   font-family: sans-serif;
 }
 
@@ -47,27 +46,64 @@ input[type="text"]:focus {
 
 .cards {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(6, 1fr);
   gap: 1rem;
 }
 
 .card {
   cursor: pointer;
   background-color: transparent;
-  height: 300px;
   perspective: 1000px;
   margin: 10px;
   padding: 5px;
+  background-color: black;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+  border-radius: 5px;
+}
+
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+}
+
+.container {
+  padding: 2px 16px;
+  color: white;
+}
+
+.container h4 {
+  margin: 5px;
+  text-align: center;
+}
+
+.container p {
+  font-size: 15px;
+  margin: auto;
+  text-align: center;
 }
 
 .card img {
   width: 100%;
   height: 300px;
   object-fit: cover;
+  object-position: center;
+  border-radius: 5px 5px 0 0;
 }
 
-.card-inner {
-  position: relative;
-  width: 100%;
-  height: 100%;
+.border {
+  border-top: 3px solid red;
+  padding: 0px;
+  margin: 0px;
+}
+
+@media (max-width: 800px) {
+  .cards {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (max-width: 500px) {
+  .card {
+    grid-template-columns: 1fr;
+  }
 }
