--- a/src/App.css
+++ b/src/App.css
@@ -44,6 +44,12 @@ input[type="text"]:focus {
   -moz-box-shadow: 0px 0px 5px 1px rgba(255, 255, 255, 0.75);
 }
 
+.spinner {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .cards {
   display: grid;
   grid-template-columns: repeat(6, 1fr);
@@ -88,6 +94,13 @@ input[type="text"]:focus {
   object-fit: cover;
   object-position: center;
   border-radius: 5px 5px 0 0;
+}
+
+.footer {
+  bottom: 0px;
+  color: white;
+  text-align: center;
+  padding: 10px 0px;
 }
 
 .border {
